--- a/src/app/shared/components/password-manager/password-manager.component.scss
+++ b/src/app/shared/components/password-manager/password-manager.component.scss
@@ -54,6 +54,12 @@
     }
   }
 
+  // Shake animation for wrong password feedback
+  .shake {
+    animation: shake 0.6s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    transform-origin: center center;
+  }
+
   .store-option {
     display: flex;
     align-items: flex-start;
