--- a/src/app/features/modals/settings/about-modal/about-modal.component.html
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.html
@@ -48,7 +48,7 @@
         class="about-item"
         (click)="navigateTo('updates')"
         aria-label="Check for app updates"
-        [matBadge]="updateAvailable ? '1' : null"
+        [matBadge]="updateAvailable ? 'i' : null"
         matBadgeColor="warn"
         [matTooltip]="updateAvailable ? 'Application update available' : null"
       >
@@ -152,27 +152,85 @@
             <h3>Application Updates</h3>
             <p class="current-version">Current version: {{ rCloneManagerVersion }}</p>
 
+            <!-- Updater error banner -->
+            @if (updateErrorMessage && !updateErrorDismissed) {
+              <div class="update-error" role="alert" aria-live="assertive">
+                <mat-icon svgIcon="circle-exclamation" class="warn" aria-hidden="true"></mat-icon>
+                <span class="error-text">{{ updateErrorMessage }}</span>
+                <button
+                  type="button"
+                  mat-icon-button
+                  aria-label="Dismiss update error"
+                  (click)="closeUpdateError()"
+                >
+                  <mat-icon svgIcon="circle-xmark"></mat-icon>
+                </button>
+              </div>
+            }
+
             @if (updateAvailable) {
               <div class="update-available">
-                <mat-icon svgIcon="circle-exclamation" class="update-icon"></mat-icon>
                 <div class="update-info">
-                  <h4>Update Available</h4>
-                  <p>Version {{ updateAvailable.version }} is available</p>
+                  <div class="update-header">
+                    <mat-icon svgIcon="circle-up" class="accent"></mat-icon>
+                    <h4>Update Available</h4>
+                  </div>
+                  <p>
+                    Version {{ updateAvailable.version }} is available
+                    <span
+                      *ngIf="updateReleaseChannel"
+                      class="release-badge"
+                      [ngClass]="'badge-' + updateReleaseChannel"
+                      matTooltip="Release tag: {{ updateReleaseTag }}"
+                    >
+                      {{ updateReleaseChannel | titlecase }}
+                    </span>
+                  </p>
+
+                  <!-- Download Progress -->
+                  @if (downloadInProgress) {
+                    <div class="download-progress">
+                      <mat-progress-bar
+                        mode="determinate"
+                        [value]="downloadPercentage"
+                        color="primary"
+                      >
+                      </mat-progress-bar>
+                      <div class="progress-text">
+                        <span>Downloading: </span>
+                        <span
+                          >{{ downloadProgress | formatFileSize }} /
+                          {{ downloadTotal | formatFileSize }}</span
+                        >
+                      </div>
+                    </div>
+                  }
+
                   <div class="update-actions">
                     <button
                       mat-raised-button
                       color="primary"
                       (click)="installUpdate()"
-                      [disabled]="installingUpdate"
+                      [disabled]="installingUpdate || downloadInProgress"
                     >
-                      @if (installingUpdate) {
+                      @if (installingUpdate || downloadInProgress) {
                         <mat-spinner diameter="20"></mat-spinner>
-                        Installing...
+                        @if (downloadInProgress) {
+                          Downloading... ({{ downloadPercentage | number: '1.0-0' }}%)
+                        } @else {
+                          Installing...
+                        }
                       } @else {
                         Install Update
                       }
                     </button>
-                    <button mat-stroked-button (click)="skipUpdate()">Skip This Version</button>
+                    <button
+                      mat-stroked-button
+                      (click)="skipUpdate()"
+                      [disabled]="downloadInProgress"
+                    >
+                      Skip This Version
+                    </button>
                   </div>
                 </div>
               </div>
@@ -182,9 +240,12 @@
                 <p>Your app is up to date</p>
               </div>
             }
-
             <div class="update-settings">
-              <mat-slide-toggle [checked]="autoCheckUpdates" (change)="toggleAutoCheck()">
+              <mat-slide-toggle
+                [checked]="autoCheckUpdates"
+                (change)="toggleAutoCheck()"
+                [disabled]="downloadInProgress"
+              >
                 Automatically check for updates
               </mat-slide-toggle>
             </div>
@@ -192,13 +253,17 @@
             <div class="update-settings">
               <mat-form-field appearance="outline" class="channel-select">
                 <mat-label>Update Channel</mat-label>
-                <mat-select [value]="updateChannel" (selectionChange)="changeChannel($event.value)">
+                <mat-select
+                  [value]="updateChannel"
+                  (selectionChange)="changeChannel($event.value)"
+                  [disabled]="downloadInProgress"
+                >
                   <mat-option
                     *ngFor="let channel of channels; trackBy: trackByChannel"
                     [value]="channel.value"
                   >
                     <div class="channel-option">
-                      <span class="channel-label">{{ channel.label }}</span>
+                      <span class="channel-label">{{ channel.label }} </span>
                       <span class="channel-description">{{ channel.description }}</span>
                     </div>
                   </mat-option>
@@ -210,7 +275,7 @@
               <button
                 mat-stroked-button
                 (click)="checkForUpdates()"
-                [disabled]="checkingForUpdates"
+                [disabled]="checkingForUpdates || downloadInProgress"
               >
                 @if (checkingForUpdates) {
                   <mat-spinner diameter="20"></mat-spinner>
@@ -220,6 +285,28 @@
                 }
               </button>
             </div>
+            @if (skippedVersions.length > 0) {
+              <div class="update-settings">
+                <h4>Skipped Updates</h4>
+                <p class="skipped-info">These updates were skipped but can be restored:</p>
+                <div class="skipped-versions">
+                  <div
+                    *ngFor="let version of skippedVersions; trackBy: trackByVersion"
+                    class="skipped-version-item"
+                  >
+                    <span class="version-text">{{ version }}</span>
+                    <button
+                      mat-icon-button
+                      (click)="unskipVersion(version)"
+                      matTooltip="Restore this update"
+                      aria-label="Restore update {{ version }}"
+                    >
+                      <mat-icon svgIcon="rotate-left" aria-hidden="true"></mat-icon>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            }
           </div>
         </div>
       }
