--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -689,6 +689,7 @@ h6 {
 // Fix for mat-icon overflow issues in Windows
 mat-icon {
   overflow: visible !important;
+  min-height: unset !important;
 
   &.warn {
     color: var(--warn-color) !important;
